Make package install arguments multi-line

--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -37,7 +37,11 @@ ARG WSO2_SERVER_HOME=${USER_HOME}/${WSO2_SERVER}-${WSO2_SERVER_VERSION}
 
 # install required packages
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends --no-install-suggests unzip curl telnet iproute2 && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends --no-install-suggests \
+    curl \
+    iproute2 \
+    telnet \
+    unzip && \
     rm -rf /var/lib/apt/lists/*
 
 # create a user group and a user
